tolk-tester/tests/invalid-semantics/err-4271.tolk
fun main() {
    fun(x: int, y: () -> void = fun() {}) {  }
}

/**
@compilation_should_fail
@stderr not a constant expression
 */
